# eventlog

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
EventLog/: Array.h  CMakeLists.txt  ChannelConfig.cpp  ChannelConfig.h  EventLogQuery.h  EventReader.cpp  EventReader.h  EvtVariant.h  Exception.h  IChannelConfig.h  IChannelPathEnumerator.h  IEventLogQuery.h  IEventReader.h  IEventRecord.h  ILogInfo.h  IPublisherMetadata.h  PublisherEnumerator.cpp  PublisherEnumerator.h  PublisherMetadata.cpp  Ref.h  RefObject.h  StringUtils.cpp  WinSys.cpp
EventLog/cmake/: EventLogConfig.cmake.in
EventLog/include/: CommonTypes.h  Exceptions.h  IEventMetadata.h  IEventMetadataEnumerator.h  IPublisherEnumerator.h  RefPtr.h
EventLog/src/: Array.h  ChannelPathEnumerator.cpp  ChannelPathEnumerator.h  EventLogQuery.cpp  EventRecord.cpp  EventRecord.h  EvtHandle.cpp  EvtHandle.h  EvtVariant.cpp  EvtVariant.h  Exception.cpp  Exceptions.cpp  LogInfo.cpp  LogInfo.h  PublisherMetadata.cpp  PublisherMetadata.h  PublisherMetadataImpl.h  Queues.h  StringUtils.cpp  StringUtils.h  WinSys.cpp  WinSys.h
EventLogCtl/: CMakeLists.txt  EventLogCtl.cpp
